--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,8 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: arturo
+  password: 12345
 
 development:
   <<: *default
@@ -81,5 +83,5 @@ test:
 production:
   <<: *default
   database: todoapp_production
-  username: todoapp
-  password: <%= ENV['TODOAPP_DATABASE_PASSWORD'] %>
+  # username: todoapp
+  # password: <%= ENV['TODOAPP_DATABASE_PASSWORD'] %>
